--- a/Detection_of_fraud_electronic_transactions.ipynb
+++ b/Detection_of_fraud_electronic_transactions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Problem Statement:\n",
     "\n",
-    "Credit card fraudulent issue is gaining more and more attention nowadays due to an increasing popularity in digital and online purchases. It is important that credit card companies are able to recognize fraudulent credit card transactions so that customers are not charged for items that they did not purchase. However, credit card or other financial institutions can not share their transaction information easily with the public due to customer privacy protection policies. Alternatively, synthetic transaction data can be generated from real-world data using a simulation approach, which highly mimics the patterns and characteristics of the real data in order for credit card fraud detection research and analysis. \n",
+    "Electronic fraudulent issue is gaining more and more attention nowadays due to an increasing popularity in digital and online purchases. It is important that financial institutions including banking and credit unions, are able to recognize or be aware of potential fraudulent electronic transactions early in time so that customers are not charged for items that they did not purchase and the financial institutions do not suffer financial loss or further threat from fraudulent activities. \n",
     "\n",
     "The dataset comes from https://www.kaggle.com/ntnu-testimon/paysim1\n",
     "\n",
