--- a/Detection_of_fraud_electronic_transactions.ipynb
+++ b/Detection_of_fraud_electronic_transactions.ipynb
@@ -1932,15 +1932,15 @@
    "source": [
     "1. Through exploratory data analysis, we identified that fraud transactions only occur in cash out and transfer type of transactions. <br>\n",
     "<br>\n",
-    "2. Several original features such as nameOrig and nameDest do not correlate with the occurence of fraud transactions and they are removed for further analysis. The original fraud flag freature does a poor job at positively identifying fraud transactions and this feature is further removed for ML modeling.<br>\n",
+    "2. Several original features such as nameOrig and nameDest do not correlate with the occurrence of fraud transactions and they are removed for ML analysis. The original fraud flag feature does a poor job at identifying fraud transactions and this feature was also removed for ML analysis.<br>\n",
     "<br>\n",
-    "3. We identified suspicious transaction pattern in the dataset, where the transaction amount is >0 but both its origin and destination account balance are 0. This type of transactions account for close to 50% of the overall fraudulent transactions and account for only 0.06% of the legit transactions. <br>\n",
+    "3. We identified suspicious transaction patterns in the dataset, where the transaction amount is >$0 but both its origin and destination account balances are $0. This type of transaction count for close to 50% of the overall fraudulent transactions but only 0.06% of the legit transactions. <br>\n",
     "<br>\n",
-    "4. Several engineered features are created including day and hour of the transactions.  Two other new features are also created to identify the suspicious transactions mentioned above: one for the origin account and another for the destination account. These two features generate outstanding balances in both origin and destination accounts that could not be transafered due to the 0 balance in the origin account, or a 0 balance for origin accounts that have sufficient balance for transfer.<br>\n",
+    "4. Several newly engineered features are introduced, including the day and the hour of the transactions. Two other new features are also created to mark out the suspicious transactions mentioned above: one feature for the origin account and another for the destination account. These two features the attempted transactions where both origin and destination accounts have $0 balance.<br>\n",
     "<br>\n",
-    "5. Five ML models (LogisticRegressionCV, Gradient Boosting Classifier, Random Forest Classifier, Decision Tree and K Neighbors Classifier) have been tested on the modified dataset and all of them give good predictions of the fraud transactions. Random Forest Classifier gives the best performance with a ROC score being very close to 1: 100% ture negative rate, 0 false positive rate, 0.5% false negative rate and 99.5% true positive rate.<br>\n",
+    "5. Five ML models (LogisticRegressionCV, Gradient Boosting Classifier, Random Forest Classifier, Decision Tree and K Neighbors Classifier) have been tested on the modified dataset and four of them give very good prediction of the fraud transactions. Among which, Random Forest Classifier gives the best performance with a ROC score being nearly 1, with 100% true negative rate, 0% false positive rate, 0.5% false negative rate and 99.5% true positive rate.<br>\n",
     "<br>\n",
-    "6. The most critical features in fraud transaction prediction by random forest model include the new and old blance in the origin account, newly engineered features including flagged amounts during suspicious transactions in origin and destination accounts."
+    "6. The most critical features in fraud transaction prediction by random forest model include the new and old balance in the origin account. The newly introduced features, flag fraud for suspicious transactions, significantly improved the model performance."
    ]
   }
  ],
